Fixing mega menu spacing, fixing localization

--- a/assets/wm__base.css
+++ b/assets/wm__base.css
@@ -1817,7 +1817,7 @@ details[open] > .share-button__fallback {
   position: absolute;
   right: 0;
   top: 0;
-  width: 2.4rem;
+  width: 1.4rem;
 }
 
 .field__button > .svg-wrapper {
